# whittle

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.githooks/: commit-msg
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-03-bam-to-fastq.md  2026-07-03-chopping-folder-input.md  2026-07-03-chopping-plan1-fastq-core.md  2026-07-03-chopping-plan2-ubam-mods.md
docs/superpowers/specs/: 2026-07-03-chopping-bam-to-fastq-design.md  2026-07-03-chopping-folder-input-design.md  2026-07-03-chopping-tag-aware-trimmer-design.md
scripts/: validate-commit-message.sh
src/: cli.rs  config.rs  filter.rs  lib.rs  main.rs  obs.rs  pipeline.rs  qual.rs  record.rs
src/adapter/: detect.rs  infer.rs  mod.rs  ont_catalog.tsv  preset.rs  search.rs
src/io/: bam.rs  counting.rs  dir.rs  fastq.rs  mod.rs
src/mods/: mod.rs  parse.rs  reconstruct.rs  serialize.rs
src/pipeline/: bam.rs  fastq.rs  mod.rs
src/trim/: mod.rs  strategies.rs
src/workflow/: bam.rs  fastq.rs  mod.rs
tests/: adapter_cli.rs  bam_mods_oracle.rs  bam_smoke.rs  bam_to_fastq.rs  bgzf_fastq.rs  cli.rs  cli_corpus.rs  folder.rs  gz_output.rs
