[package]
name = "whittle"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Tag-aware long-read (ONT/PacBio) trimmer for FASTQ/uBAM that reconstructs MM/ML base-modification tags on every trim and split"

[[bin]]
name = "whittle"
path = "src/main.rs"

[lib]
name = "whittle"
path = "src/lib.rs"

[dependencies]
seq_io = "0.3.4"
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }
clap = { version = "4", features = ["derive"] }
rayon = "1"
crossbeam-channel = "0.5"
anyhow = "1"
thiserror = "2"
noodles-bam = "0.90.0"
noodles-sam = "0.85.0"
noodles-bgzf = { version = "0.47.0", features = ["libdeflate"] }
bstr = "1"
gzp = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rust-htslib = { version = "1.0", default-features = false, features = ["libdeflate"] }

[profile.release]
lto = "fat"
codegen-units = 1
