[package]
name = "whittle"
version = "0.1.1"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0"
description = "Fast, tag-aware long-read (ONT/PacBio) trimmer for FASTQ and unaligned BAM that keeps position-indexed tags (MM/ML/MN modifications, per-base kinetics, ONT signal) in register through every trim and split"
authors = ["Erdi Kilic <erdican266@gmail.com>"]
repository = "https://github.com/erdikilic/whittle"
homepage = "https://github.com/erdikilic/whittle"
documentation = "https://docs.rs/whittle"
readme = "README.md"
keywords = ["bioinformatics", "nanopore", "long-read", "fastq", "bam"]
categories = ["science::bioinformatics", "command-line-utilities"]
exclude = ["/.github/"]

[[bin]]
name = "whittle"
path = "src/main.rs"

[lib]
name = "whittle"
path = "src/lib.rs"

[dependencies]
seq_io = "0.3.4"
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }
clap = { version = "4", features = ["derive"] }
rayon = "1"
crossbeam-channel = "0.5"
anyhow = "1"
thiserror = "2"
noodles-bam = "0.91.0"
noodles-sam = "0.86.0"
noodles-bgzf = { version = "0.48.0", features = ["libdeflate"] }
bstr = "1"
gzp = "2"
indicatif = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
jiff = "0.2"
sassy = { version = "0.2", default-features = false }
# Direct dep (also pulled transitively by sassy) so main() can call
# ensure_simd() to fail with a clear message on CPUs lacking AVX2, rather
# than executing an illegal AVX2 instruction and crashing (SIGILL).
ensure_simd = "0.1"
aho-corasick = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# rust-htslib links the system HTSlib (a C library) and is used only by the
# BAM MM/ML oracle test. Gate it to Unix so Windows builds/CI don't have to
# provision libhts, which is impractical there.
[target.'cfg(unix)'.dev-dependencies]
rust-htslib = { version = "1.0", default-features = false, features = ["libdeflate"] }

[profile.release]
lto = "fat"
codegen-units = 1

[lints.rust]
# whittle contains no `unsafe` blocks; keep it that way. Clippy's default
# groups (correctness/suspicious/style/complexity/perf) already run and pass
# clean, so they're not re-declared here. `pedantic` is intentionally left off:
# it flags ~200 subjective items that would fail CI's `-D warnings` gate.
unsafe_code = "forbid"

[package.metadata.docs.rs]
all-features = true
