[package]
name = "whittle"
version = "0.1.1"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0"
description = "Fast, tag-aware long-read (ONT/PacBio) trimmer for FASTQ and unaligned BAM that keeps position-indexed tags (MM/ML/MN modifications, per-base kinetics, ONT signal) in register through every trim and split"
authors = ["Erdi Kilic <erdican266@gmail.com>"]
repository = "https://github.com/erdikilic/whittle"
homepage = "https://github.com/erdikilic/whittle"
documentation = "https://docs.rs/whittle"
readme = "README.md"
keywords = ["bioinformatics", "nanopore", "long-read", "fastq", "bam"]
categories = ["science::bioinformatics", "command-line-utilities"]
exclude = ["/.github/"]

[[bin]]
name = "whittle"
path = "src/main.rs"

[lib]
name = "whittle"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"

rayon = "1"
crossbeam-channel = "0.5"

seq_io = "0.3.4"
noodles-bam = "0.91.0"
noodles-sam = "0.86.0"
noodles-bgzf = { version = "0.48.0", features = ["libdeflate"] }

flate2 = { version = "1", features = ["zlib-ng"], default-features = false }
gzp = "2"

bstr = "1"
aho-corasick = "1"

sassy = { version = "0.2", default-features = false }
ensure_simd = "0.1"

indicatif = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
jiff = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[target.'cfg(unix)'.dev-dependencies]
rust-htslib = { version = "1.0", default-features = false, features = ["libdeflate"] }

[profile.release]
lto = "fat"
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[package.metadata.docs.rs]
all-features = true
